# hackforsrilanka_lightsoff

./: .dockerignore  .env.development  .env.example  .gitignore  Dockerfile  Procfile  README.md  TASK_DETAILS.md  alllogs.sh  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  dump.rdb  livelogs.sh  new_req.txt  prod.env  pyproject.toml  requirements.txt  start.sh
.envs/: .django.example  .postgres.example
.github/workflow/: main.yml
Task_details/: TASK_DETAILS.md
compose/django/: Dockerfile  start
compose/django/celery/beat/: start
compose/django/celery/flower/: start
compose/django/celery/worker/: start
compose/postgres/: Dockerfile
compose/traefik/: traefik.https.yml  traefik.yml
conf/: celery.py  settings.py  urls.py
data/db/: postmaster.pid
data/db/global/: 1260  pg_control  pg_internal.init
data/db/pg_stat_tmp/: db_0.stat  db_13757.stat  global.stat
docker/: docker-compose.yml  entrypoint.sh
lightsoff/: admin.py  apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
lightsoff/api/: apis.py  serializers.py
lightsoff/migrations/: 0001_initial.py  0002_fetch_notification.py  0003_delete_notification_rename_day_fetch_date.py  0004_auto_20220427_0938.py  0005_notification_subscriber.py  0006_transaction.py  0007_alter_transaction_campaingn_cost.py  0008_smsapiaccesstoken_expired_at.py  0009_schedulegroup.py  0010_delete_notification.py  0011_delete_subscriber.py  0012_auto_20220427_1412.py  0013_batch.py  0014_alter_schedulegroup_periodic_task.py  0015_auto_20220427_1553.py  0016_alter_schedulegroup_periodic_task.py  0017_auto_20220427_1750.py  0018_auto_20220428_1021.py  0019_auto_20220428_1155.py  0020_auto_20220428_1800.py  0021_delete_otp.py  0022_alter_subscriber_group_name.py  0023_transaction_tx_id.py  0024_lastprocesseddocument.py  0025_auto_20220502_1808.py  0026_remove_schedulegroup_periodic_task.py  0027_batch_is_batch_run.py  0028_transaction_created_at.py  0029_rename_gcc_place_gss.py  0030_suburbplace.py  0031_place_suburb.py  0032_auto_20220512_1618.py
lightsoff/scraper/: DriverManager.py  requirements.txt  scraper.py  test.py  testOutputsFromLive.py  testOutputsFromLocal.py
lightsoff/scraper/hardcoded/: places.json  schedules.json
lightsoff/templates/lightsoff/: base.html  message.html  subscribe.html  subscribe_success.html
scripts/: load_district_place.py  load_suburb_place.py  periodic_task_renew.py
scripts/datafile/: .~lock.suburb-areas-places-may-04-2022-FINAL.xlsx#  areas-district-table-may-12-2022.csv.xlsx  suburb-areas-places-may-04-2022-FINAL.xlsx
(+79 files in other folders)
