[tool.poetry]
name = "hackforsrilanka_lightsoff"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.13"
psycopg2 = "^2.9.3"
django-environ = "^0.8.1"
gunicorn = "^20.1.0"
whitenoise = "^6.0.0"
twilio = "^7.8.1"
django-anymail = {extras = ["mailgun"], version = "^8.5"}
redis = "^4.2.2"
django-redis = "^5.2.0"
celery = "^5.2.6"
django-crispy-forms = "^1.14.0"
crispy-tailwind = "^0.5.0"
python-dateutil = "^2.8.2"
django-celery-beat = "^2.2.1"
djangorestframework = "^3.13.1"
pyotp = "^2.6.0"
pip = "^22.0.4"
install = "^1.3.5"
djangorestframework-api-key = "^2.2.0"
django-cors-headers = "^3.11.0"
aiofiles = "0.6.0"
camelot-py = "0.10.1"
lxml = "4.6.3"
Jinja2 = "2.11.2"
opencv-python-headless = "4.5.5.64"
pandas = "1.3.4"
python-multipart = "0.0.5"
pytz = "2021.3"
ghostscript = "0.7"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
